solve the conflict

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,43 +9,12 @@
   <title></title>
 </head>
 <body>
-<div class="container">
-<div class="row">
-  <div class="element">
+  <div class="cc">
 
   </div>
-  <div class="element">
-
-  </div>
-  <div class="element">
-
-  </div>
+<div class="container gameContainer" id="gameContainer">
 </div>
-<div class="row">
-  <div class="element">
-
-  </div>
-  <div class="element">
-
-  </div>
-  <div class="element">
-
-  </div>
-</div>
-<div class="row">
-  <div class="element">
-
-  </div>
-  <div class="element">
-
-  </div>
-  <div class="element">
-
-  </div>
-</div>
-
-
-
+<div class="resultContainer" id="resultContainer">
 </div>
 <script type="text/javascript" src="./js/main.js">
 
